# vmize

./: .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: example.yml  linux.yml  macos.yml
batch/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
batch/.github/workflows/: linux.yml  macos.yml
batch/example/job1/: job.json
batch/example/job1/scripts/: 00_print.sh
batch/example/job2/: job.json
batch/example/split-job1/: job.json
batch/example/split-job1/scripts/: 00_live.sh
batch/example/split-job2/: job.json
batch/example/split-job2/scripts/: 00_live.sh
batch/example/split-job3/: job.json
batch/example/split-job3/scripts/: 00_live.sh
batch/example/split-job4/: job.json
batch/example/split-job4/scripts/: 00_live.sh
batch/example/split-task1/: task.json
batch/example/split-task1/input/: 00_live.sh
batch/example/split-task2/: task.json
batch/example/split-task2/input/: 00_live.sh
batch/example/split-task3/: task.json
batch/example/split-task3/scripts/: 00_live.sh
batch/example/split-task4/: task.json
batch/example/split-task4/input/: 00_live.sh
batch/example/task1/: task.json
batch/example/task1/scripts/: 10_result.sh
batch/example/task2/: task.json
batch/src/: error.rs  job.rs  lib.rs  result.rs  runner.rs  task.rs  vm_ops.rs
batch/tests/: integration.rs
batch/tests/fixtures/: example-job.json  example-task.json
cli/: Cargo.toml
cli/src/: main.rs
dashboard/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js
dashboard/e2e/: layout.spec.js
dashboard/src/: dashboard.html  lib.rs  main.rs
dashboard/tests/: api.rs
jobs/ollama/: job.json
jobs/runc/: job.json
jobs/runc-llama/: job.json
task/: Cargo.toml
task/src/: lib.rs
tasks/: README.md
tasks/runc-llama/: task.json
vm/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  UNDER_THE_HOOD.md  deps.sh  install.sh
vm-dashboard/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
vm-dashboard/src/: dashboard.html  main.rs
vm-dashboard/tests/: api.rs
vm/.github/workflows/: linux.yml  macos.yml
vm/scripts/: setup_custom_kernel_boot.sh
vm/src/: api.rs  config.rs  lib.rs  main.rs  mount.rs  ops.rs  platform.rs  process.rs  progress.rs
vm/src/cloud_init/: iso.rs  mod.rs  seed.rs
vm/src/image/: disk.rs  downloader.rs  mod.rs
vm/src/qemu/: config.rs  mod.rs  runner.rs
vm/src/ssh/: client.rs  key.rs  mod.rs
vm/src/vm/: mod.rs  port.rs  record.rs
vm/tests/: cli_disk_size_flag.rs  cli_ssh_port_rejected.rs  integration_test.rs
worker/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TASK_CHAIN_TUTORIAL.md
worker/src/: lib.rs  (+3 more)
(+86 files in other folders)
