[package]
name = "batch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread"] }
vm = { path = "../vm" }

[[bin]]
name = "batch"
path = "src/bin/batch.rs"
