[package]
name = "vmize"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vmize"
path = "src/main.rs"

[dependencies]
worker = { path = "../worker" }
task = { path = "../task" }
dashboard = { path = "../dashboard" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
