[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "dashboard"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
batch = { path = "../batch" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
