[package]
name = "vm"
version = "0.1.0"
edition = "2024"
description = "Ubuntu Cloud Image VM Automation"

[lib]
name = "vm"
path = "src/lib.rs"

[[bin]]
name = "vm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
clap = { version = "4.5", features = ["derive"] }
openssh = { version = "0.11", features = ["native-mux"] }
futures = "0.3"
tempfile = "3.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
